--- a/pagina-videojuegos/src/main/resources/templates/components/nav-bar.html
+++ b/pagina-videojuegos/src/main/resources/templates/components/nav-bar.html
@@ -1,4 +1,4 @@
-<nav th:fragment="nav_bar" class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav th:fragment="nav_bar" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
         <a class="navbar-brand" th:href="@{/categoria/inicio}">GO Games</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
