--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/detalleCompra.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/detalleCompra.html
@@ -4,43 +4,63 @@
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Compra</title>
+    <style>
+         img {
 
+        max-width: 250px;
+        max-height: 200px;
+        min-width: 250px;
+        min-height: 200px;
+        display: block;
+        float: left;
+        object-fit: cover;
+    }
+    .box{
+        width: 1200px;
+        height: 800px;
+    }
+    </style>
 </head>
-<body style="background: #121212"class="d-flex flex-column min-vh-100">
+<body style="background-image: url('https://images.alphacoders.com/113/1138740.png');
+background-size: cover; background-position: center center; background-attachment: fixed;" class="d-flex flex-column min-vh-100">
 
 <nav th:replace="components/nav-bar :: nav_bar"></nav>
 
 
 
 <div class="vh-100 d-flex justify-content-center align-items-center">
-    <div class="card" style="width: 50rem;">
+    <div class="card text-white" style="width: 50rem; background-color: rgba(0,0,0,0.5); padding: 20px;">
         <div class="card-body" th:object="${videojuego}">
-            <h5 class="card-title">COMPRA</h5>
+            <h5 class="card-title text-center">COMPRA</h5>
+            <div class="d-flex justify-content-center">
+                <img th:src="${videojuego.img_portada}" class="img-fluid rounded-start justify-content-center">
+            </div>
+
             <table class="table">
-                <thead>
+                <thead class="text-white">
                 <tr>
                     <th scope="col">Nombre</th>
                     <th scope="col">Precio del juego</th>
                     <th scope="col">Precio Total</th>
                 </tr>
                 </thead>
-                <tbody>
-                    <td th:text="${videojuego.nombre} "></td>
+                <tbody class="text-white">
+                    <td th:text="${videojuego.nombre} " ></td>
                     <td th:text="${videojuego.precio} + '$'"></td>
-                    <td th:text="${videojuego.precio} * 1.65"></td>
+                    <td th:text="${videojuego.precio} * 1.65 + '$'"></td>
                 </tr>
                 </tbody>
             </table>
-            <p class="card-text">el precio total del juego es con impuestos del pais incluidos <br>
-            matodo de pago</p>
+            <p class="card-text text-center">el precio total del juego es con impuestos del pais incluidos (65%)<br>
+            </p>
             <div th:if="${usuario.tarjeta == null}">
-                <a href="/usuarios/direccion-tarjeta" class="btn btn-primary">ingresar tarjeta</a>
+                <a th:href="@{/usuarios/direccion-tarjeta}" class="btn btn-primary">ingresar tarjeta</a>
             </div>
-            <div th:if="${usuario.tarjeta != null}" class="d-grid gap-2 d-md-flex justify-content-md-end">
-                <a href="/usuarios/direccion-tarjeta" class="btn btn-primary">Cambiar Tarjeta</a>
+            <div th:if="${usuario.tarjeta != null}" class="d-grid gap-3 d-flex justify-content-center">
+                <a th:href="@{/usuarios/direccion-tarjeta}" class="btn btn-primary">Cambiar Tarjeta</a>
                 <form th:action="@{/compra/videojuego/detalle-compra/{id}/{idUsuario}(id=${videojuego.id}, idUsuario = ${usuario.id})}" method="post">
                     <div>
-                    <button class="btn btn-success" type="submit">Comprar</button>
+                    <button class="btn btn-danger" type="submit">Comprar</button>
                 </div>
                 </form>
             </div>
