--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/login.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/login.html
@@ -2,20 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">  <title>Inicio de sesion</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <title>Inicio de sesion</title>
 </head>
 
-<body>
+<body style="background-image: url('https://cdnb.artstation.com/p/assets/images/images/015/372/199/large/lise-hennequin-affiche-paysage-jpeg.jpg?1548095502')">
 
 <nav th:replace="components/nav-bar :: nav_bar"></nav>
 
-<div class="container">
-  <div class="row mt-8">
-    <div class="col-6">
-      <div class="card">
+<div class="container-fluid bg-transparent">
+  <div class="row justify-content-center pt-5 mt-5 mr-1">
+    <div class="col-md-4">
+      <div class="card text-white" style="background-color: rgba(225,225,225,0.1); padding: 20px;">
         <div class="card-body">
-
-          <h1>Inicio de sesión</h1>
+          <h1 class="text-center">Inicio de sesión</h1>
       <form th:action="@{/usuarios/login}" method="post">
 
         <div th:if=${param.error}>
@@ -29,29 +29,28 @@
         </div>
 
 
-        <div class="form-group">
-          <label  for="username">Nombre de
-            usuario : </label> <input id="username"  name="username" type="text" class="form-control"
+        <div class="form-group mx-sm-4">
+          <label  for="username">Email: </label> <input id="username"  name="username" type="text" class="form-control"
                                       required autofocus="autofocus" placeholder="Ingrese su email">
         </div>
 
-        <div class="form-group">
-          <label  for="contrasenia">Password : </label> <input
+        <div class="form-group mx-sm-4">
+          <label  for="contrasenia">contraseña: </label> <input
                 id="contrasenia" type="password"  name="password" class="form-control" required
-                autofocus="autofocus" placeholder="Contraseña">
+                autofocus="autofocus" placeholder="Contraseña"/>
         </div>
-
-        <div class="form-group">
+        <br>
+        <div class="form-group mx-sm-4" >
           <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-              <input type="submit" class="form-control btn btn-primary" name="login-submit" id="login-submit"
-                     value="Iniciar sesión" />
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary" type="submit" name="login-submit" id="login-submit" value="Iniciar sesión">inicio sesión</button>
             </div>
           </div>
         </div>
       </form>
-      <div class="form-group">
-        <span>Si eres nuevo usuario <a th:href="@{/usuarios/registro}">regístrate aqui</a></span>
+          <br>
+      <div class="form-group text-center">
+        <span class="text-wrap">Si eres nuevo usuario <a th:href="@{/usuarios/registro}" >regístrate aqui</a></span>
       </div>
     </div>
   </div>
