--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/registro.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/registro.html
@@ -6,54 +6,69 @@
     <title>Registro de usuarios</title>
 
 </head>
-<body>
+<body  style="background-image: url('https://matheusgoularte.files.wordpress.com/2011/12/tile.png')">
 
 <nav th:replace="components/nav-bar :: nav_bar"></nav>
-<div class="container">
-    <div class="row mt-5">
-        <div class="col-6">
-            <div class="card">
+<div class="container-fluid bg-transparent">
+    <div class="row mt-5 justify-content-center pt-5 mt-5 mr-1">
+        <div class="col-4">
+            <div class="card text-center text-white" style="background-color: rgba(225,225,225,0.1); padding: 20px;">
                 <div class="card-body">
             <form th:action="@{/usuarios/registro}" method="post" th:object="${usuario}">
                 <h1>Registro</h1>
-                <div class="form-group col-md-6">
+
+                <div class="form-group row justify-content-center">
+                    <div class="col-10">
                     <label for="nombre">Nombre:</label>
-                    <input  type="text" class="form-control" id="nombre" th:field="*{nombre}">
+                    <input  type="text" class="form-control text-center" id="nombre" th:field="*{nombre}">
                     <div class="text-danger" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
+                    </div>
                 </div>
-                <div class="form-group col-md-6">
+
+                <div class="form-group row justify-content-center">
+                    <div class="col-10">
                     <label for="apellido">Apellido:</label>
-                    <input  type="text" class="form-control" id="apellido" th:field="*{apellido}">
+                    <input  type="text" class="form-control text-center" id="apellido" th:field="*{apellido}">
                     <div class="text-danger" th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></div>
-                </div>
-                <div class="form-group col-md-3">
-                    <label for="cumplanios">Fecha de cumpleaños</label>
-                    <input type="date" class="form-control" id="cumplanios" th:field="*{cumplanios}">
-                    <div class="text-danger" th:if="${#fields.hasErrors('cumplanios')}" th:errors="*{cumplanios}"></div>
-                </div>
-                    <div class="form-group col-md-6">
-                        <label for="nombre_usuario">nombre de usuario:</label>
-                        <input  type="text" class="form-control" id="nombre_usuario" th:field="*{nombre_usuario}">
-                        <div class="text-danger" th:if="${#fields.hasErrors('nombre_usuario')}" th:errors="*{nombre_usuario}"></div>
                     </div>
-                <div class="form-group col-md-6">
-                    <label for="contrasenia">contraseña:</label>
-                    <input  type="password" class="form-control" id="contrasenia" th:field="*{contrasenia}">
-                    <div class="text-danger" th:if="${#fields.hasErrors('contrasenia')}" th:errors="*{contrasenia}"></div>
                 </div>
-                <div class="form-group col-md-6">
+
+                <div class="form-group row justify-content-center">
+                    <div class="col-10">
                     <label for="email">Email:</label>
-                    <input  type="email" class="form-control" id="email" th:field="*{email}">
+                    <input  type="email" class="form-control text-center" id="email" th:field="*{email}">
                     <div class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
-                </div>
-                <div class="row m-3">
-                    <div class="col-md-3">
-                        <button class="btn btn-outline-secondary" type="reset" style="width:100%">Resetear
-                            Formulario
-                        </button>
                     </div>
-                    <div class="col-md-6">
-                        <button class="btn btn-success" type="submit" style="width:100%">Guardar</button>
+                </div>
+
+                <div class="form-group row justify-content-center">
+                    <div class="col-10">
+                    <label for="cumplanios">Fecha de cumpleaños</label>
+                    <input type="date" class="form-control text-center" id="cumplanios" th:field="*{cumplanios}">
+                    <div class="text-danger" th:if="${#fields.hasErrors('cumplanios')}" th:errors="*{cumplanios}"></div>
+                    </div>
+                </div>
+
+                <div class="form-group row justify-content-center">
+                    <div class="col-10">
+                    <label for="nombre_usuario">nombre de usuario:</label>
+                    <input  type="text" class="form-control text-center" id="nombre_usuario" th:field="*{nombre_usuario}">
+                    <div class="text-danger" th:if="${#fields.hasErrors('nombre_usuario')}" th:errors="*{nombre_usuario}"></div>
+                   </div>
+                </div>
+
+                <div class="form-group row justify-content-center">
+                    <div class="col-10">
+                    <label for="contrasenia">contraseña:</label>
+                    <input  type="password" class="form-control text-center" id="contrasenia" th:field="*{contrasenia}">
+                    <div class="text-danger" th:if="${#fields.hasErrors('contrasenia')}" th:errors="*{contrasenia}"></div>
+                    </div>
+                </div>
+
+                <br>
+                <div class="form-group row justify-content-center">
+                    <div class="col-10">
+                    <button class="btn btn-success" type="submit" style="width:100%">Guardar</button>
                     </div>
                 </div>
             </form>
