--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/videojuego.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/videojuego.html
@@ -5,25 +5,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Formulario Videojuego</title>
 </head>
-<body>
+<body style="background: #383838; color: white">
 
 <nav th:replace="components/nav-bar :: nav_bar"></nav>
 
-<div class="container">
-    <div class="row mt-5">
-        <div class="col-12">
-            <div class="card">
-                <div class="card-body">
-                    <form th:action="@{/videojuego/formulario/videojuego/{id}(id=${videojuego.id})}" method="post" th:object="${videojuego}" enctype="multipart/form-data">
-                        <div class="row g-3">
+<div class="container" style="background: #383838; color: white">
+    <div class="row mt-5" style="background: #383838; color: white">
+        <div class="col-12" style="background: #383838; color: white">
+            <div class="card" style="background: #282828; color: white">
+                <div class="card-body" style="background: #282828; color: white">
+                    <form th:action="@{/videojuego/formulario/videojuego/{id}(id=${videojuego.id})}" method="post" th:object="${videojuego}" enctype="multipart/form-data" style="background: #282828; color: white">
+                        <div class="row g-3" style="background: #282828; color: white">
 
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-md-6" style="background: #282828; color: white">
                                 <label for="nombre">Nombre:</label>
                                 <input type="text" class="form-control" id="nombre" th:field="*{nombre}">
                                 <div class="text-danger" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
                             </div>
 
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-md-6" style="background: #282828; color: white">
                                 <label for="estudio">Estudio: </label>
                                 <select class="form-control" id="estudio" th:field="*{estudio}">
                                     <option th:each="estudio: ${estudios}" th:value="${estudio.id}" th:text="${estudio.nombre}"></option>
@@ -31,25 +31,25 @@
                                 <div class="text-danger" th:if="${#fields.hasErrors('estudio')}" th:errors="*{estudio}"></div>
                             </div>
 
-                            <div class="form-group col-md-6">
+                            <div class="form-group col-md-6" style="background: #282828; color: white">
                                 <label for="imagen_portada">Link imagen de portada:</label>
                                 <input type="text" class="form-control" id="imagen_portada" th:field="*{img_portada}">
                                 <div class="text-danger" th:if="${#fields.hasErrors('img_portada')}" th:errors="*{img_portada}"></div>
                             </div>
 
-                            <div class="form-group col-md-3">
+                            <div class="form-group col-md-3" style="background: #282828; color: white">
                                 <label for="precio">Precio:</label>
                                 <input type="number" class="form-control" id="precio" th:field="*{precio}">
                                 <div class="text-danger" th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}"></div>
                             </div>
 
-                            <div class="form-group col-md-3">
+                            <div class="form-group col-md-3" style="background: #282828; color: white">
                                 <label for="fecha_lanzamiento">Fecha de Lanzamiento</label>
                                 <input type="date" class="form-control" id="fecha_lanzamiento" th:field="*{fecha_lanzamiento}">
                                 <div class="text-danger" th:if="${#fields.hasErrors('fecha_lanzamiento')}" th:errors="*{fecha_lanzamiento}"></div>
                             </div>
 
-                            <div class="form-group col-md-3">
+                            <div class="form-group col-md-3" style="background: #282828; color: white">
                                 <label for="categoria">Categoria</label>
                                 <select class="form-control" id="categoria" th:field="*{categoria}">
                                     <option th:each="categoria : ${categorias}" th:value="${categoria.id}" th:text="${categoria.tipo}"></option>
@@ -57,30 +57,30 @@
                                 <div class="text-danger" th:if="${#fields.hasErrors('categoria')}" th:errors="*{categoria}"></div>
                             </div>
 
-                            <div class="form-check">
+                            <div class="form-check" style="background: #282828; color: white">
                                 <label class="form-check-label" for="PG">Es para mayores</label>
                                 <input class="form-check-input" type="checkbox" value="" id="PG" th:field="*{PG}">
                                 <div class="text-danger" th:if="${#fields.hasErrors('PG')}" th:errors="*{PG}"></div>
                             </div>
 
 
-                            <div th:if="${videojuego.id}!=0" class="input-group mb-3 col-md-6">
+                            <div th:if="${videojuego.id}!=0" class="input-group mb-3 col-md-6" style="background: #282828; color: white">
                                 <label class="col-12">Ingreso de imagenes de muestra:</label>
                                 <a class="btn btn-success"  th:href="@{/videojuego/ingresoimg/videojuego/{id}(id=${videojuego.id})}" type="button">Ingresar imagenes</a>
                             </div>
 
 
-                            <div class="form-group col-md-12">
+                            <div class="form-group col-md-12" style="background: #282828; color: white">
                                 <label for="descripcion">Descripción: </label>
                                 <textarea class="form-control" id="descripcion" rows="5" th:field="*{descripcion}"></textarea>
                                 <div class="text-danger" th:if="${#fields.hasErrors('descripcion')}" th:errors="*{descripcion}"></div>
                             </div>
                         </div>
-                        <div class="row m-3">
-                            <div class="col-md-6">
+                        <div class="row m-3" style="background: #282828; color: white">
+                            <div class="col-md-6" style="background: #282828; color: white">
                                 <button class="btn btn-outline-secondary" type="reset" style="width:100%">Resetear Formulario</button>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6" style="background: #282828; color: white">
                                 <button class="btn btn-success" type="submit" style="width:100%">Guardar</button>
                             </div>
                         </div>
