--- a/pagina-videojuegos/src/main/resources/templates/views/crudMerch.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/crudMerch.html
@@ -5,18 +5,33 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>CRUD</title>
 </head>
+<style>
 
-<body>
+    .table-triunfo{
+        background-color: rgba(51, 153, 51, .4)!important;
+    }
+
+    .table-peligro{
+        background-color: rgba(153, 0, 0, .4)!important;
+    }
+    .page-item.active .page-link {
+      color: #fff !important;
+      background: #f00 !important;
+    }
+
+</style>
+
+<body style="background: #383838; color: white">
 
 <nav th:replace="components/nav-bar :: nav_bar"></nav>
 
-<div class="container">
+<div class="container" style="background: #383838; color: white">
 
-    <div class="row mt-3">
-        <div class="col-3">
+    <div class="row mt-3" style="background: #383838; color: white">
+        <div class="col-3" style="background: #383838; color: white">
             <h4>CRUD Merch</h4>
         </div>
-        <div class="col-4 d-flex flex-row-reverse">
+        <div class="col-4 d-flex flex-row-reverse" style="background: #383838; color: white">
             <a th:href="@{/videojuego/crudVideojuego}" class="btn btn-success">Ir a CRUD Videojuego</a>
         </div>
         <div class="col-5 d-flex flex-row-reverse">
@@ -24,9 +39,9 @@
         </div>
     </div>
 
-    <div class="row mt-3">
-        <div class="col-12">
-            <table class="table">
+    <div class="row mt-3" style="background: #383838; color: white">
+        <div class="col-12" style="background: #383838; color: white">
+            <table class="table" style="background: #383838; color: white">
                 <thead class="thead-dark">
                 <tr>
                     <th scope="col">ID</th>
@@ -38,7 +53,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="merchs : ${merchs}" th:classappend="${merchs.activo} ? table-success : table-danger">
+                <tr th:each="merchs : ${merchs}" th:classappend="${merchs.activo} ? table-triunfo : table-peligro">
                     <td th:text="${merchs.id}"></td>
                     <td th:text="${merchs.nombre}"></td>
                     <td th:text="${merchs.precio}"></td>
@@ -58,13 +73,13 @@
                     <nav aria-label="Pagination">
                         <ul class="pagination justify-content-center">
                             <li class="page-item" th:classappend="${prev == 0 ? 'disabled' : ''}">
-                                <a class="page-link" th:href="@{|/merch/crudMerch?page=${prev}|}">Anterior</a>
+                                <a class="bg-black text-white page-link" th:href="@{|/merch/crudMerch?page=${prev}|}">Anterior</a>
                             </li>
                             <li class="page-item" th:each="page : ${pages}" th:classappend="${current == page ? 'active' : ''}">
-                                <a class="page-link" th:href="@{|/merch/crudMerch?page=${page}|}" th:text="${page}"></a>
+                                <a class="bg-black text-white page-link" th:href="@{|/merch/crudMerch?page=${page}|}" th:text="${page}"></a>
                             </li>
                             <li class="page-item" th:classappend="${current == last ? 'disabled' : ''}">
-                                <a class="page-link" th:href="@{|/merch/crudMerch?page=${next}|}">Siguiente</a>
+                                <a class="bg-black text-white page-link" th:href="@{|/merch/crudMerch?page=${next}|}">Siguiente</a>
                             </li>
                         </ul>
                     </nav>
