--- a/pagina-videojuegos/src/main/resources/templates/views/crudVideojuego.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/crudVideojuego.html
@@ -4,29 +4,42 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>CRUD</title>
+    <style>
+    .page-item.active .page-link {
+      color: #fff !important;
+      background: #f00 !important;
+    }
+    .table-triunfo{
+        background-color: rgba(51, 153, 51, .4)!important;
+    }
+
+    .table-peligro{
+        background-color: rgba(153, 0, 0, .4)!important;
+    }
+</style>
 </head>
 
-<body>
+<body style="background: #383838; color: white">
 
     <nav th:replace="components/nav-bar :: nav_bar"></nav>
 
-    <div class="container">
+    <div class="container" style="background: #383838; color: white">
 
-        <div class="row mt-3">
-            <div class="col-3">
+        <div class="row mt-3" style="background: #383838; color: white">
+            <div class="col-3" style="background: #383838; color: white">
                 <h4>CRUD Videojuego</h4>
             </div>
-            <div class="col-4 d-flex flex-row-reverse">
+            <div class="col-4 d-flex flex-row-reverse" style="background: #383838; color: white">
                 <a th:href="@{/merch/crudMerch}" class="btn btn-success">Ir a CRUD Merch</a>
             </div>
-            <div class="col-5 d-flex flex-row-reverse">
+            <div class="col-5 d-flex flex-row-reverse" style="background: #383838; color: white">
                 <a th:href="@{/videojuego/formulario/videojuego/0}" class="btn btn-success">Agregar Videojuego</a>
             </div>
         </div>
 
-        <div class="row mt-3">
+        <div style="background: #383838; color: white" class="row mt-3">
             <div class="col-12">
-                <table class="table">
+                <table class="table" style="background: #383838; color: white">
                     <thead class="thead-dark">
                     <tr>
                         <th scope="col">ID</th>
@@ -38,7 +51,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="videojuegos : ${videojuegos}" th:classappend="${videojuegos.activo} ? table-success : table-danger">
+                    <tr th:each="videojuegos : ${videojuegos}" th:classappend="${videojuegos.activo} ? table-triunfo : table-peligro">
                         <td th:text="${videojuegos.id}"></td>
                         <td th:text="${videojuegos.nombre}"></td>
                         <td th:text="${videojuegos.precio}"></td>
@@ -58,13 +71,13 @@
                         <nav aria-label="Pagination">
                             <ul class="pagination justify-content-center">
                                 <li class="page-item" th:classappend="${prev == 0 ? 'disabled' : ''}">
-                                    <a class="page-link" th:href="@{|/videojuego/crudVideojuego?page=${prev}|}">Anterior</a>
+                                    <a class="bg-black text-white page-link" th:href="@{|/videojuego/crudVideojuego?page=${prev}|}">Anterior</a>
                                 </li>
                                 <li class="page-item" th:each="page : ${pages}" th:classappend="${current == page ? 'active' : ''}">
-                                    <a class="page-link" th:href="@{|/videojuego/crudVideojuego?page=${page}|}" th:text="${page}"></a>
+                                    <a class="bg-black text-white page-link" th:href="@{|/videojuego/crudVideojuego?page=${page}|}" th:text="${page}"></a>
                                 </li>
                                 <li class="page-item" th:classappend="${current == last ? 'disabled' : ''}">
-                                    <a class="page-link" th:href="@{|/videojuego/crudVideojuego?page=${next}|}">Siguiente</a>
+                                    <a class="bg-black text-white page-link" th:href="@{|/videojuego/crudVideojuego?page=${next}|}">Siguiente</a>
                                 </li>
                             </ul>
                         </nav>
