--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/eliminarimgmerch.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/eliminarimgmerch.html
@@ -5,32 +5,32 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <title>Formulario Eliminar Imagen</title>
 </head>
-<body>
+<body style="background: #383838; color: white">
 
 <nav th:replace="components/nav-bar :: nav_bar"></nav>
 
-<div class="container mt-5">
-  <div class="row mt-5">
-    <div class="col-12">
-      <div class="card">
-        <div class="card-body">
-          <form th:action="@{/merch/posteliminarimg/merch/{idMerch}/{id}(idMerch=${merch.id}, id=${imagenid})}" method="post" enctype="multipart/form-data">
-            <div class="row g-3 text-center mb-3">
-              <div class="form-group col-md-12">
+<div class="container mt-5" style="background: #383838; color: white">
+  <div class="row mt-5" style="background: #383838; color: white">
+    <div class="col-12" style="background: #383838; color: white">
+      <div class="card" style="background: #383838; color: white">
+        <div class="card-body" style="background: #383838; color: white">
+          <form th:action="@{/merch/posteliminarimg/merch/{idMerch}/{id}(idMerch=${merch.id}, id=${imagenid})}" method="post" enctype="multipart/form-data" style="background: #383838; color: white">
+            <div class="row g-3 text-center mb-3" style="background: #383838; color: white">
+              <div class="form-group col-md-12" style="background: #383838; color: white">
                 <h4>Esta seguro de eliminar esta imagen? </h4>
               </div>
             </div>
 
-            <div class="container" style="display: flex; justify-content: center" >
+            <div class="container" style="display: flex; justify-content: center; background: #383838; color: white" >
               <img th:src="@{${imagenlink}}" style="max-width: 75%; min-width: 40%">
             </div>
 
-            <div class="row m-3 mt-4">
-              <div class="col-md-6">
-                <button class="btn btn-outline-secondary" type="submit" style="width:100%">Si</button>
+            <div class="row m-3 mt-4" style="background: #383838; color: white">
+              <div class="col-md-6" style="background: #383838; color: white">
+                <button class="btn btn-outline-danger" type="submit" style="width:100%">Si</button>
               </div>
-              <div class="col-md-6">
-                <a class="btn btn-success" th:href="@{/merch/ingresoimg/merch/{id}(id=${merch.id})}" style="width:100%">No</a>
+              <div class="col-md-6" style="background: #383838; color: white">
+                <a class="btn btn-danger" th:href="@{/merch/ingresoimg/merch/{id}(id=${merch.id})}" style="width:100%">No</a>
               </div>
             </div>
           </form>
