--- a/pagina-videojuegos/src/main/resources/templates/views/formulario/eliminarmerch.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/formulario/eliminarmerch.html
@@ -5,28 +5,28 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <title>Formulario Eliminar</title>
 </head>
-<body>
+<body style="background: #383838; color: white">
 
 <nav th:replace="components/nav-bar :: nav_bar"></nav>
 
-<div class="container mt-5">
-  <div class="row mt-5">
-    <div class="col-12">
-      <div class="card">
-        <div class="card-body">
-          <form th:action="@{/merch/eliminar/merch/{id}(id=${merch.id})}" method="post" enctype="multipart/form-data">
-            <div class="row g-3 text-center">
-              <div class="form-group col-md-12">
+<div class="container mt-5" style="background: #383838; color: white">
+  <div class="row mt-5" style="background: #383838; color: white">
+    <div class="col-12" style="background: #383838; color: white">
+      <div class="card" style="background: #282828; color: white">
+        <div class="card-body" style="background: #282828; color: white">
+          <form th:action="@{/merch/eliminar/merch/{id}(id=${merch.id})}" method="post" enctype="multipart/form-data" style="background: #282828; color: white">
+            <div class="row g-3 text-center" style="background: #282828; color: white">
+              <div class="form-group col-md-12" style="background: #282828; color: white">
                 <h4 th:if="${merch.activo}">Esta seguro de desactivar este producto?</h4>
                 <h4 th:unless="${merch.activo}">Esta seguro de activar este producto?</h4>
               </div>
             </div>
-            <div class="row m-3">
-              <div class="col-md-6">
-                <button class="btn btn-outline-secondary" type="submit" style="width:100%">Si</button>
+            <div class="row m-3" style="background: #282828; color: white">
+              <div class="col-md-6" style="background: #282828; color: white">
+                <button class="btn btn-outline-danger" type="submit" style="width:100%">Si</button>
               </div>
-              <div class="col-md-6">
-                <a class="btn btn-success" th:href="@{/merch/crudMerch}" style="width:100%">No</a>
+              <div class="col-md-6" style="background: #282828; color: white">
+                <a class="btn btn-danger" th:href="@{/merch/crudMerch}" style="width:100%">No</a>
               </div>
             </div>
           </form>
