Mejora de vistas de inicio, funcionalidad de ingreso imagen y arreglo de footer
-Mejore con estilos algunas etiquetas del inicio.
-Arreglé para que no se puede borrar una imagen si no hay ninguna.
-Hice que el footer siempre aparezca abajo de la pantalla

--- a/pagina-videojuegos/src/main/resources/templates/components/footer.html
+++ b/pagina-videojuegos/src/main/resources/templates/components/footer.html
@@ -1,4 +1,4 @@
-<footer th:fragment="footer" class="bg-dark text-center text-white">
+<footer th:fragment="footer" class="bg-dark text-center text-white" style="margin-top: auto;">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
         <!-- Section: Social media -->
