--- a/pagina-videojuegos/src/main/resources/templates/components/nav-bar.html
+++ b/pagina-videojuegos/src/main/resources/templates/components/nav-bar.html
@@ -6,14 +6,17 @@
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/categoria/inicio}">Inicio</a>
                 </li>
-                <li class="nav-item" sec:authorize="hasAnyRole('ADMIN','SUPERADMIN')">
-                    <a class="nav-link" th:href="@{/videojuego/crudVideojuego}">CRUD</a>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" th:href="@{/merch/merchLista}">Merch</a>
                 </li>
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" th:href="@{/usuarios/registro}">Registro</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" th:href="@{/usuarios/videojuego/biblioteca}">Biblioteca</a>
+                </li>
+                <li class="nav-item" sec:authorize="hasAnyRole('ADMIN','SUPERADMIN')">
+                    <a class="nav-link" th:href="@{/videojuego/crudVideojuego}">CRUD</a>
                 </li>
             </ul>
         </div>
