--- a/pagina-videojuegos/src/main/resources/templates/views/merchLista.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/merchLista.html
@@ -26,9 +26,9 @@
     <div class="container">
         <div class="row mt-3">
             <div class="flex" style="align-items: center">
-                <form class="form-inline my-2 my-lg-0" th:action="@{/merch/busquedaMerch}">
-                    <input class="form-control mr-sm-1" type="search" placeholder="Buscar..." aria-label="Search" name="query">
-                    <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Buscar</button>
+                <form class="form-group my-2 my-lg-0" th:action="@{/merch/busquedaMerch}">
+                    <input class="form-control mr-sm-1 mb-3" type="search" placeholder="Buscar..." aria-label="Search" name="query">
+                    <button class="btn btn-outline-danger my-2 my-sm-0" style="margin-left:40%; padding-right:100px; padding-left:100px;" type="submit">Buscar</button>
                 </form>
             </div>
         </div>
