Arreglo de detalles menores

--- a/pagina-videojuegos/src/main/resources/templates/views/biblioteca.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/biblioteca.html
@@ -32,7 +32,7 @@
 </div>
 <br>
 <div class="text-center text-white" th:if="${videojuegos.size() == 0}">
-  <h1>todavia no a comprado ningun juego!</h1>
+  <h1>Todavía no ha comprado ningún juego!</h1>
 </div>
 
 <div class="container" style="align-items: center; justify-content: center; display: flex">
