--- a/pagina-videojuegos/src/main/resources/templates/views/bibliotecaMerch.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/bibliotecaMerch.html
@@ -30,7 +30,7 @@
 </div>
 <br>
 <div class="text-center text-white" th:if="${merch.size() == 0}">
-  <h1>todavia no a comprado ninguna merch!</h1>
+  <h1>Todavía no ha comprado ningún artículo de merch!</h1>
 </div>
 <div class="container" style="align-items: center; justify-content: center; display: flex">
 <div class=" row mt-5" th:if="${merch != null}">
