--- a/pagina-videojuegos/src/main/resources/templates/views/detalle.html
+++ b/pagina-videojuegos/src/main/resources/templates/views/detalle.html
@@ -126,9 +126,9 @@ $large: 1200px;
         <br>
         <hr style="background-color: white; height: 4px;">
         <br>
-
-        <div th:replace="components/img-carousel :: img-carousel"></div>
-
+        <div th:unless="${imagenes.size() == 0}">
+            <div th:replace="components/img-carousel :: img-carousel"></div>
+        </div>
 
     </div>
     <table th:unless="${already}" class="table">
